Migrated the porject to AndroidX

--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,17 @@
 
 buildscript {
     ext.compileSdkVersion = 27
-    ext.buildToolsVersion = '27.0.2'
-    ext.minSdkVersion = 16
-    ext.targetSdkVersion = 27
-    ext.supportLibraryVersion = '27.1.0'
+    ext.buildToolsVersion = '28.0.0'
+    //ext.minSdkVersion = 16
+    //ext.targetSdkVersion = 27
+    ext.supportLibraryVersion = '27.1.1'
 
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.2.0-beta01'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
